--- a/sobre.html
+++ b/sobre.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bikcraft</title>
+    <title>Bikcraft - Sobre</title>
     <link rel="stylesheet" href="/style/normalize.css">
     <link rel="stylesheet" href="/style/reset.css">
     <link rel="stylesheet" href="/style/grid.css">
     <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/sobre.css">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
             </a>
             <nav class="grid-12 header-menu">
                 <ul>
-                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a class="menu-ativo" href="sobre.html">Sobre</a></li>
                     <li><a href="produtos.html">Produtos</a></li>
                     <li><a href="portifolio.html">Portifólio</a></li>
                     <li><a href="contato.html">Contato</a></li>
@@ -28,72 +29,38 @@
             </nav>
         </div>
     </header>
-    <section class="introducao">
+    <section class="introducao-interna interna-sobre">
         <div class="container">
-            <h1>Bicicletas feitas a mão</h1>
-            <blockquote class="quote-externo">
-                <p>
-                    "não tenha nada em sua casa que você não considere útil ou acredita ser bonito"
-                </p>
-                <cite>
-                    WILLIAN MORRIS
-                </cite>
-            </blockquote>
-            <a href="" class="btn">Orçamento</a>
+            <h1>Sobre</h1>
+            <p>conheça mais sobre bikcraft</p>
         </div>
     </section>
-    <section class="container produtos">
-        <h2 class="subtitulo">Produtos</h2>
-        <ul class="produtos-lista">
-            <li class="grid-1-3">
-                <div class="produtos-icone">
-                    <img src="img/produtos/passeio.svg" alt="">
-                </div>
-                <h3>Passeio</h3>
-                <p>
-                    Ainda sim, existem duvidas a respeito de como a necessidade de renovação.
-                </p>
-            </li>
-            <li class="grid-1-3">
-                <div class="produtos-icone">
-                    <img src="img/produtos/esporte.svg" alt="">
-                </div>
-                <h3>Esporte</h3>
-                <p>
-                    Ainda sim, existem duvidas a respeito de como a necessidade de renovação.
-                </p>
-            </li>
-            <li class="grid-1-3">
-                <div class="produtos-icone">
-                    <img src="img/produtos/retro.svg" alt="">
-                </div>
-                <h3>Retro</h3>
-                <p>
-                    Ainda sim, existem duvidas a respeito de como a necessidade de renovação.
-                </p>
-            </li>
-        </ul>
-        <div class="call">
-            <p>clique aqui e veja os detalhes dos produtos</p>
-            <a class="btn btn-preto" href="">Produtos</a>
+    <section class="missao-sobre container">
+        <div class="grid-10">
+            <h2 class="subtitulo-interno">História, Missão e Visão</h2>
+            <p>
+                No mundo atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da gestão
+                inovadora da qual fazemos parte da qual fazemos parte.
+            </p>
+            <p>
+                No mundo atual, a contínua expansão de nossa atividade cumpre um papel essencial na formulação da gestão
+                inovadora da qual fazemos parte da qual fazemos parte.
+            </p>
         </div>
-    </section>
-    <section class="portifolio">
-        <div class="container">
-            <h2 class="subtitulo">
-                Portifólio
-            </h2>
-            <ul class="portifolio-lista">
-                <li class="grid-8"><img src="img/portfolio/retro.jpg" alt=""></li>
-                <li class="grid-8"><img src="img/portfolio/passeio.jpg" alt=""></li>
-                <li class="grid-16"><img src="img/portfolio/esporte.jpg" alt=""></li>
+        <div class="grid-6">
+            <h2 class="subtitulo-interno">Valores</h2>
+            <ul>
+                <li>- Qualidade no processo com</li>
+                <li>- Foco no cliente sem perder a</li>
+                <li>- Diversão, preservando a</li>
+                <li>- Natureza com sustentabilidade</li>
             </ul>
-            <div class="call">
-                <p>conheça mais o nosso portfólio</p>
-                <a class="btn" href="">Portifólio</a>
-            </div>
+        </div>
+        <div class="grid-16 foto-equipe">
+            <img src="/img/equipe-bikcraft.jpg" alt="">
         </div>
     </section>
+
     <section class="qualidade container">
         <h2 class="subtitulo">Qualidade</h2>
         <img src="img/bikcraft-qualidade.svg" alt="">
@@ -110,10 +77,6 @@
                 <h3>Sustentabilidade</h3>
                 <p>Ainda assim, existem dúvudas a respeito de como a necessidade de renovação renovação renovação</p>
         </ul>
-        <div class="call">
-            <p>clique aqui e veja os detalhes dos produtos</p>
-            <a class="btn btn-preto" href="">Sobre</a>
-        </div>
     </section>
     <section class="quebra">
         <blockquote class="quote-externo container">
@@ -129,7 +92,8 @@
         <div class="container">
             <div class="grid-8 footer-historia">
                 <h3>Nossa História</h3>
-                <p>o verdadeiro segredo da felicidade  est[a em ter um genuíno interesse por todos os detalhes  da vida cotidiana, interesse  por todos os detalhes da vida cotidiana.</p>
+                <p>o verdadeiro segredo da felicidade est[a em ter um genuíno interesse por todos os detalhes da vida
+                    cotidiana, interesse por todos os detalhes da vida cotidiana.</p>
             </div>
             <div class="grid-4 footer-contato">
                 <h3>Contato</h3>
