--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bikcraft</title>
-    <link rel="stylesheet" href="/style/normalize.css">
-    <link rel="stylesheet" href="/style/reset.css">
-    <link rel="stylesheet" href="/style/grid.css">
-    <link rel="stylesheet" href="/style/style.css">
+    <title>Bikcraft - Bicicletas Personalizadas</title>
+    <meta name="description"
+        content="Compre a sua bicicleta personalizada na Bikecraft. Possuimos modelos Passeio, Retrô e Esporte.">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Bikcraft - Bicicletas Personalizadas">
+    <meta property="og:description" content="Compre a sua bicicleta personalizada na Bikecraft. Possuimos modelos Passeio, Retrô e Esporte.">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+
+    <link rel="stylesheet" href="style/style.min.css">
+
 </head>
+<script>document.documentElement.classList.add('js')</script>
 
 <body>
     <header class="header">
         <div class="container">
             <a href="index.html" class="grid-4">
-                <img src="img/bikcraft.svg" alt="">
+                <img class="logo" src="img/bikcraft.svg" alt="">
             </a>
             <nav class="grid-12 header-menu">
                 <ul>
@@ -30,8 +37,8 @@
     </header>
     <section class="introducao">
         <div class="container">
-            <h1>Bicicletas feitas a mão</h1>
-            <blockquote class="quote-externo">
+            <h1 class="fadeInDown" data-anime="400">Bicicletas feitas a mão</h1>
+            <blockquote data-anime="800" class="quote-externo fadeInDown">
                 <p>
                     "não tenha nada em sua casa que você não considere útil ou acredita ser bonito"
                 </p>
@@ -39,7 +46,7 @@
                     WILLIAN MORRIS
                 </cite>
             </blockquote>
-            <a href="" class="btn">Orçamento</a>
+            <a data-anime="1200" href="" class="btn">Orçamento</a>
         </div>
     </section>
     <section class="container produtos">
@@ -129,7 +136,8 @@
         <div class="container">
             <div class="grid-8 footer-historia">
                 <h3>Nossa História</h3>
-                <p>o verdadeiro segredo da felicidade  est[a em ter um genuíno interesse por todos os detalhes  da vida cotidiana, interesse  por todos os detalhes da vida cotidiana.</p>
+                <p>o verdadeiro segredo da felicidade est[a em ter um genuíno interesse por todos os detalhes da vida
+                    cotidiana, interesse por todos os detalhes da vida cotidiana.</p>
             </div>
             <div class="grid-4 footer-contato">
                 <h3>Contato</h3>
@@ -142,9 +150,12 @@
             <div class="grid-4 footer-redes">
                 <h3>Redes Socias</h3>
                 <ul>
-                    <li><a href="https://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg" alt=""></a></li>
-                    <li><a href="https://twittercom" target="_blank"><img src="img/redes-sociais/twitter.svg" alt=""></a></li>
-                    <li><a href="https://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg" alt=""></a></li>
+                    <li><a href="https://facebook.com" target="_blank"><img src="img/redes-sociais/facebook.svg"
+                                alt=""></a></li>
+                    <li><a href="https://twittercom" target="_blank"><img src="img/redes-sociais/twitter.svg"
+                                alt=""></a></li>
+                    <li><a href="https://instagram.com" target="_blank"><img src="img/redes-sociais/instagram.svg"
+                                alt=""></a></li>
                 </ul>
             </div>
         </div>
@@ -154,6 +165,9 @@
             </div>
         </div>
     </footer>
+    <script src="./js/simple-slide.js"></script>
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
