--- a/produtos.html
+++ b/produtos.html
@@ -6,18 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft - Produtos</title>
-    <link rel="stylesheet" href="/style/normalize.css">
-    <link rel="stylesheet" href="/style/reset.css">
-    <link rel="stylesheet" href="/style/grid.css">
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="/style/produtos.css">
+    <link rel="stylesheet" href="style/style.min.css">
+
+
 </head>
+<script>document.documentElement.classList.add('js')</script>
 
 <body>
     <header class="header">
         <div class="container">
             <a href="index.html" class="grid-4">
-                <img src="img/bikcraft.svg" alt="">
+                <img class="logo" src="img/bikcraft.svg" alt="">
             </a>
             <nav class="grid-12 header-menu">
                 <ul>
@@ -31,12 +30,12 @@
     </header>
     <section class="introducao-interna interna-produtos">
         <div class="container">
-            <h1>Produtos</h1>
-            <p>conheça todos nossos produtos</p>
+            <h1 data-anime="400" class="fadeInDown">Produtos</h1>
+            <p data-anime="800" class="fadeInDown">conheça todos nossos produtos</p>
         </div>
     </section>
 
-    <section class="container produto-item">
+    <section data-anime="1200" class="container produto-item fadeInDown" >
         <div class="grid-11 produto-h2">
             <img src="/img/produtos/bikcraft-passeio-1.jpg" alt="">
             <h2>Passeio</h2>
@@ -181,6 +180,8 @@
             </div>
         </div>
     </footer>
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
