--- a/sobre.html
+++ b/sobre.html
@@ -6,18 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bikcraft - Sobre</title>
-    <link rel="stylesheet" href="/style/normalize.css">
-    <link rel="stylesheet" href="/style/reset.css">
-    <link rel="stylesheet" href="/style/grid.css">
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="/style/sobre.css">
+    <link rel="stylesheet" href="style/style.min.css">
+
+
 </head>
+<script>document.documentElement.classList.add('js')</script>
 
 <body>
     <header class="header">
         <div class="container">
             <a href="index.html" class="grid-4">
-                <img src="img/bikcraft.svg" alt="">
+                <img class="logo" src="img/bikcraft.svg" alt="">
             </a>
             <nav class="grid-12 header-menu">
                 <ul>
@@ -31,11 +30,11 @@
     </header>
     <section class="introducao-interna interna-sobre">
         <div class="container">
-            <h1>Sobre</h1>
-            <p>conheça mais sobre bikcraft</p>
+            <h1 data-anime="400" class="fadeInDown">Sobre</h1>
+            <p data-anime="800" class="fadeInDown">conheça mais sobre bikcraft</p>
         </div>
     </section>
-    <section class="missao-sobre container">
+    <section data-anime="1200" class="missao-sobre container fadeInDown">
         <div class="grid-10">
             <h2 class="subtitulo-interno">História, Missão e Visão</h2>
             <p>
@@ -118,6 +117,8 @@
             </div>
         </div>
     </footer>
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
